--- a/resources/sass/widget/topsidebar.scss
+++ b/resources/sass/widget/topsidebar.scss
@@ -12,7 +12,6 @@
         width: 100%;
         color: $color-gray;
         cursor: pointer;
-        border-right: 1px solid $color-border;
         &:last-of-type {
             border-right: none;
         }
@@ -53,3 +52,13 @@
         }
     }
 }
+
+
+
+.newtop {
+    &__subtitle {
+        font-size: 20px;
+    }
+}
+
+
