--- a/resources/sass/widget/iframe.scss
+++ b/resources/sass/widget/iframe.scss
@@ -14,6 +14,7 @@
     position: relative;
     background: #fff;
     overflow: hidden;
+    border-radius: 16px;
     -webkit-box-shadow: 0px 0px 18px -1px rgba(0,0,0,0.29);
     -moz-box-shadow: 0px 0px 18px -1px rgba(0,0,0,0.29);
     box-shadow: 0px 0px 18px -1px rgba(0,0,0,0.29);
