--- a/resources/sass/widget/scheme.scss
+++ b/resources/sass/widget/scheme.scss
@@ -2,6 +2,10 @@
 
 .venue-wrapper {
   background: #e9e9e9;
+  @media (max-width:575px) {
+    border: 1px solid #D6D9DC;
+  }
+  border-radius: 24px;
   position: relative;
   width: 100%;
   height: 0;
@@ -31,13 +35,14 @@
     user-select: none;
     display: flex;
     position: absolute;
+    border-radius: 4px;
     font-size: 13px;
     justify-content: center;
     align-items: center;
-    border: 1px solid;
+    // border: 1px solid;
     //background: $color-gray;
-    background-color: #f2f4f5;
-    color: #a5aab9;
+    background-color: #d9d9d9;
+    color: #000;
     &.hasTicket {
       color: #fff;
       border: none;
@@ -58,8 +63,13 @@
   .seat-row {
     cursor: pointer;
     position: absolute;
+    border-radius: 4px;
+    background: #D9D9D9;
     left: 0;
-    margin-top: 6px;
+    padding: 2px 6px;
+    font-weight: 400;
+    font-family: Inter;
+    // font-size: 10px;
   }
   .scheme-price-bubbles {
     .scheme-price-bubble {
@@ -68,7 +78,7 @@
       .price-color {
         width: 20px;
         height: 20px;
-        border-radius: 100%;
+        border-radius: 4px;
         margin-right: 10px;
       }
       span {
