fix data for new pay widget

--- a/resources/sass/widget/mainpart.scss
+++ b/resources/sass/widget/mainpart.scss
@@ -45,7 +45,7 @@
   //}
   .content-part {
     padding: 0 38px;
-    height: 100%;
+    // height: 100%;
     .venue-wrapper {
       background: #fff;
       -ms-overflow-style: none;  /* Internet Explorer 10+ */
