--- a/resources/sass/general/fonts.scss
+++ b/resources/sass/general/fonts.scss
@@ -15,26 +15,26 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 
 
-// @font-face {
-//     font-family: 'Inter';
-//     src: url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
-// //     font-weight: 500;
-// //     font-style: normal;
-// }
+@font-face {
+    font-family: 'Inter';
+    src: url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+//     font-weight: 500;
+//     font-style: normal;
+}
 
 
-//@font-face {
-//  font-family: 'PT Sans';
-//  src: url('/fonts/PTSans-Regular.ttf');
-//  font-weight: 400;
-//  font-style: normal;
-//}
-//
-//@font-face {
-//  font-family: 'PT Sans';
-//  src: url('/fonts/PTSans-Bold.ttf');
-//  font-weight: 700;
-//  font-style: normal;
-//}
+@font-face {
+ font-family: 'PT Sans';
+ src: url('/fonts/PTSans-Regular.ttf');
+ font-weight: 400;
+ font-style: normal;
+}
+
+@font-face {
+ font-family: 'PT Sans';
+ src: url('/fonts/PTSans-Bold.ttf');
+ font-weight: 700;
+ font-style: normal;
+}
 
 
