--- a/resources/sass/general/_variables.scss
+++ b/resources/sass/general/_variables.scss
@@ -3,7 +3,7 @@
 $body-bg: #f8fafc;
 
 // Typography
-$font: 'Montserrat', sans-serif;
+$font: 'Montserrat';
 
 // Bootstrap override
 //$spacer: 5rem;
