--- a/resources/sass/widget/iframe.scss
+++ b/resources/sass/widget/iframe.scss
@@ -63,7 +63,7 @@
     font-weight: bold;
     font-size: 23px;
     opacity: 0.5;
-    font-family: Tahoma, Verdana, Arial, sans-serif;
+    font-family: Tahoma, Verdana, Arial;
     color:#000 !important;
     text-decoration: none !important;
     &:hover {
