--- a/resources/sass/widget/mainpart.scss
+++ b/resources/sass/widget/mainpart.scss
@@ -6,7 +6,7 @@
 .widget-part {
   max-width: 1200px;
   height: 100vh;
-  font-family: Inter;
+  font-family: Montserrat;
   padding: 20px 50px;
   @media (max-width:575px) {
     padding: 10px;
