--- a/resources/sass/widget/scheme.scss
+++ b/resources/sass/widget/scheme.scss
@@ -68,7 +68,7 @@
     left: 0;
     padding: 2px 6px;
     font-weight: 400;
-    font-family: Inter;
+    font-family: Montserrat;
     // font-size: 10px;
   }
   .scheme-price-bubbles {
